[package]
name = "Icarus-nrf9160-bsp"
version = "0.0.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Daniel Hayes <dkhayes117>"]
categories = ["embedded", "no-std"]
keywords = ["arm", "nrf9160"]
repository = "https://github.com/dkhayes117/Icarus-nrf9160-bsp/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
